# pyutils

./: .gitignore  DOCS.md  LICENSE  README.md  TC_INTEGRATION_PLAN.md  Untitled.ipynb  __init__.py  anom_pr.py  benchmark_idw.py  bh_thorthwaite.py  bh_thorthwaite2.py  buffer.py  ccsthorthwaite.py  corr_med.py  custom_colorbar.py  eto.py  evapotranspiration.py  getvertshp.py  idw.py  isinpoly.py  isinshp.py  mkdocs.yml  plot_maps.py  plot_maps_old.py  pyproject.toml  pyutils.py  read_nc.py  rvGamma.py  setup.py  shp_area.py  spi.py  test_phase1_results.txt  test_phase1_verification.py  test_phase2_results.txt  test_phase2_verification.py  test_phase3_results.txt  test_phase3_verification.py  thiessen.py  thiessen2.py  vazoes_minimas.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: changelog.md  index.md
docs/api/: corr_med.md  evapotranspiration.md  idw.md  plot_maps.md  read_nc.md  spi.md  thiessen.md
docs/api/climate/: bias_correction.md  index.md
docs/api/geospatial/: index.md  interpolation.md  io.md  shapefile.md  visualization.md
docs/api/hydrology/: evapotranspiration.md  flow_analysis.md  index.md  indices.md  time_concentration.md  water_balance.md
docs/api/pyeto/: check.md  convert.md  fao.md
docs/api/utils/: conversions.md  index.md  validators.md
docs/getting-started/: installation.md  quickstart.md
pyutils/: __init__.py
pyutils/climate/: __init__.py  bias_correction.py
pyutils/core/: __init__.py  base.py  constants.py  exceptions.py
pyutils/geospatial/: __init__.py  interpolation.py  io.py  shapefile.py  visualization.py
pyutils/hydrology/: __init__.py  evapotranspiration.py  flow_analysis.py  indices.py  time_concentration.py  water_balance.py
pyutils/utils/: __init__.py  conversions.py  validators.py
rv/: RvEmpirica.py  RvGama.py  RvLinear.py  RvMedia.py  RvOns.py  Untitled.ipynb  evaluete_glms.py  plr.py
tests/: conftest.py  test_climate.py  test_evapotranspiration.py  test_geospatial.py  test_hydrology.py  test_idw.py  test_pyeto_check.py  test_pyeto_convert.py  test_pyeto_fao.py  test_spi.py  test_utils.py
