[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutils"
version = "0.1.0"
description = "Geospatial analysis and hydrology utilities for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Duarte Junior", email = "duarte.jr105@gmail.com"}
]
keywords = [
    "hydrology",
    "evapotranspiration",
    "geospatial",
    "climate",
    "rainfall",
    "water-balance"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "geopandas>=0.10",
    "shapely>=1.7",
    "matplotlib>=3.3",
    "scipy>=1.7",
    "netCDF4>=1.5",
    "cartopy>=0.20",
    "mapclassify>=2.4",
    "python-dateutil>=2.8",
    "geovoronoi>=0.3",
    "scikit-learn>=0.24",
]

[project.optional-dependencies]
viz = ["cartopy>=0.20"]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.9",
    "isort>=5.0",
]

[project.urls]
Repository = "https://github.com/duartejr/pyutils"
Documentation = "https://github.com/duartejr/pyutils#readme"
Issues = "https://github.com/duartejr/pyutils/issues"

[tool.setuptools]
packages = ["pyeto", "rv"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
