[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutils"
version = "0.5.0"
description = "Geospatial analysis and hydrology utilities for Python"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Duarte Junior", email = "duarte.jr105@gmail.com"}
]
keywords = [
    "hydrology",
    "evapotranspiration",
    "geospatial",
    "climate",
    "rainfall",
    "water-balance"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Hydrology",
]

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "geopandas>=0.10",
    "shapely>=1.7",
    "matplotlib>=3.3",
    "scipy>=1.7",
    "netCDF4>=1.5",
    "xarray>=2022.6",
    "dask>=2022.6",
    "cartopy>=0.20",
    "mapclassify>=2.4",
    "python-dateutil>=2.8",
    "geovoronoi>=0.3",
    "scikit-learn>=0.24",
]

[project.optional-dependencies]
viz = ["cartopy>=0.20"]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.9",
    "isort>=5.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Repository = "https://github.com/duartejr/pyutils"
Documentation = "https://duartejr.github.io/pyutils"
Issues = "https://github.com/duartejr/pyutils/issues"

[tool.setuptools]
packages = [
    "pyutils",
    "pyutils.core",
    "pyutils.hydrology",
    "pyutils.geospatial",
    "pyutils.climate",
    "pyutils.utils",
    "pyeto",
    "rv",
]
py-modules = [
    "bh_thorthwaite", "bh_thorthwaite2", "buffer", "ccsthorthwaite",
    "corr_med", "custom_colorbar", "eto", "evapotranspiration", "getvertshp",
    "idw", "isinpoly", "isinshp", "plot_maps",
    "read_nc", "rvGamma", "shp_area", "spi", "thiessen", "vazoes_minimas",
    "pyutils"
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests for individual functions",
    "integration: Integration tests",
]
